--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ header {
   position: fixed;
   background-color: #FFFFFF;
   width: 100%;
+  height: 100;
   box-shadow: 0 5px 5px #FFFFFF;
 }
 #main-navigation {
@@ -114,7 +115,7 @@ footer {
 /* WARNING - Flexbox below! */
 .photobox {
   height: 400px;
-  width: 100%;
+  width: 98%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -122,7 +123,7 @@ footer {
 }
 .photobox1 {
   height: 250px;
-  width: 100%;
+  width: 98%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -275,7 +276,7 @@ footer {
   font-size: 72px;
   font-weight: 400;
   animation-duration: 3s;
-  animation-name: fadeInRight;
+  animation-name: fadeback;
   z-index: 0;
 }
 #aboutbodydiv{
